Issue #125: Replaced Oracle Tools with Oracle Bedrock