@@ -11,7 +11,7 @@
 
     <artifactId>webapp-test</artifactId>
 
-    <name>Coherence Incubator Web Application Test</name>
+    <name>Coherence Incubator Web Application (integration tests)</name>
 
     <packaging>jar</packaging>
 
@@ -38,16 +38,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.oracle.tools</groupId>
-            <artifactId>oracle-tools-coherence</artifactId>
-            <version>${oracle.tools.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.oracle.tools</groupId>
-            <artifactId>oracle-tools-testing-support</artifactId>
-            <version>${oracle.tools.version}</version>
+            <groupId>com.oracle.bedrock.coherence</groupId>
+            <artifactId>coherence-${oracle.coherence.base.version}-testing-support</artifactId>
+            <version>${oracle.bedrock.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -58,6 +51,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -65,7 +59,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.plugin.version}</version>
                 <configuration>
-                    <argLine>-Dorg.eclipse.jetty.LEVEL=DEBUG -Xms1500m -Xmx1500m -XX:MaxPermSize=500m</argLine>
+                    <argLine>-Dorg.eclipse.jetty.LEVEL=DEBUG -Xms1500m -Xmx1500m</argLine>
                     <useSystemClassLoader>true</useSystemClassLoader>
                     <useManifestOnlyJar>false</useManifestOnlyJar>
                     <additionalClasspathElements>
@@ -75,6 +69,64 @@
                         <classpathDependencyExcludes>com.oracle.coherence.incubator:webserver</classpathDependencyExcludes>
                         <classpathDependencyExcludes>javax.servlet:servlet-api</classpathDependencyExcludes>
                     </classpathDependencyExcludes>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-toolchains-plugin</artifactId>
+                <version>${maven.tool.chains.plugin.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>toolchain</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <toolchains>
+                        <jdk>
+                            <version>${test.jdk.version}</version>
+                            <vendor>oracle</vendor>
+                        </jdk>
+                    </toolchains>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven.compiler.plugin.version}</version>
+                <configuration>
+                    <source>${test.jdk.version}</source>
+                    <target>${test.jdk.version}</target>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>${maven.javadoc.plugin.version}</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-install-plugin</artifactId>
+                <version>${maven.install.plugin.version}</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>${maven.deploy.plugin.version}</version>
+                <configuration>
+                    <skip>true</skip>
                 </configuration>
             </plugin>
         </plugins>
